# shm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  changelog.md
Engine/: CMakeLists.txt
Engine/assets/: border.fs  border.vs  brick.mtl  model_loading.fs  model_loading.vs  wooden watch tower23.mtl
Engine/include/: Actor.hpp  BaseActor.hpp  BaseCubeMap.hpp  BaseRenderer.hpp  BaseUtility.hpp  Camera.hpp  Common.hpp  Core.hpp  Engine.hpp  Handler.hpp  InputHandler.hpp  Light.hpp  Logger.hpp  Utility.hpp  butils.hpp  context_manager.hpp
Engine/include/GLFW/: glfw3.lib
Engine/include/assimp/: assimp-vc142-mtd.lib
Engine/include/glad/: glad.h
Engine/include/physics/: BasePhysics.cpp  BasePhysics.hpp  PhysicWorld.cpp  PhysicWorld.hpp  WorldObject.cpp  WorldObject.hpp
Engine/include/shys/: CMakeLists.txt  shys.cpp  shys.hpp
Engine/internal/: CameraActor.cpp  CameraActor.hpp
Engine/openGLRenderer/: Camera.cpp  Camera.hpp  CubeMaps.cpp  CubeMaps.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  buffers.cpp  buffers.hpp  cube.h  glad.c  openGLRenderer.cpp  openGLRenderer.hpp  openglutility.cpp  openglutility.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
Engine/source/: Actor.cpp  Camera.cpp  Engine.cpp  Handler.cpp  Light.cpp  context_manager.cpp
PlayGround/: birdModel.cpp  birdModel.hpp  birdPhysic.cpp  birdPhysic.hpp  flappybird.cpp  gpc.cpp  main.cpp  pipePhysic.cpp  pipePhysic.hpp  staticActor.cpp  staticActor.hpp  world.cpp
PlayGround/assets/: frag.fs  vert.vs
PlayGround/assets/second/: Handgun_obj.mtl  bird.mtl  cone.fbx  cone.mtl  model_loading.fs  model_loading.vs  pipe.mtl  texturedbird.mtl  texturedpipe.mtl  texturedwing.mtl  untitled.mtl  wing.mtl
examples/basic-scene/: CMakeLists.txt  README.md
examples/basic-scene/assets/: vert.vs
examples/basic-scene/assets/models/: chair.mtl  model_loading.fs  model_loading.vs  plane.mtl  tableobj.mtl  wooden_surface.mtl
examples/basic-scene/assets/shaders/: depth_map_shader.fs  frag.fs  material.glsl  model_loading.fs  model_loading.vs  simple_color_shader.fs  skybox.fs
examples/basic-scene/includes/: staticActor.hpp
examples/basic-scene/sources/: main.cpp  scene.cpp  staticActor.cpp
